--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
   <meta name="author" content="midwhite" />
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
 
 </head>
-<body>
+<body style="font-family: 'Noto Sans Japanese';">
   <div id="app"></div>
 </body>
 </html>
